NATTQA-ENV/force-app/main/default/objects/CONTAINER_Service_Agreement__c/CONTAINER_Service_Agreement__c.object-meta.xml
<CustomObject>
    <description>Custom Container Service Agreement object</description>
    <label>Service Agreement</label>
    <nameField>
        <displayFormat>SA-{00000}</displayFormat>
        <label>Service Agreement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Agreements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>