NATTQA-ENV/force-app/main/default/objects/CONTAINER_Service_Agreement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Account for Container Service Agreement object</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Agreements</relationshipLabel>
    <relationshipName>Service_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>