NATTQA-ENV/force-app/main/default/objects/CONTAINER_Service_Agreement__c/fields/CONTAINER_Agreement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Agreement_Start_Date__c</fullName>
    <description>Container Service Agreement field</description>
    <label>Agreement Start Date</label>
    <type>Date</type>
</CustomField>