NATTQA-ENV/force-app/main/default/objects/CONTAINER_Service_Agreement__c/fields/CONTAINER_Company_Registration__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Company_Registration__c</fullName>
    <description>Container Service Account field to be used in DocuSign</description>
    <formula>TEXT( Account__r.CONTAINER_Service_Company_Registration__c)</formula>
    <label>Company Registration</label>
    <type>Text</type>
</CustomField>