NATTQA-ENV/force-app/main/default/objects/CONTAINER_Service_Agreement__c/fields/CONTAINER_DocuSign_Agreement_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_DocuSign_Agreement_End_Date__c</fullName>
    <description>Formula date for DocuSign</description>
    <formula>CASE(
MONTH( CONTAINER_Agreement_End_Date__c),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
&quot;December&quot;
)
+&quot; &quot; +LPAD(TEXT(DAY (CONTAINER_Agreement_End_Date__c)),2,&quot;0&quot;)
+&quot;, &quot; +TEXT(YEAR(CONTAINER_Agreement_End_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DocuSign Agreement End Date</label>
    <type>Text</type>
</CustomField>