NATTQA-ENV/force-app/main/default/objects/CONTAINER_Service_Agreement__c/fields/CONTAINER_Other_Refrigerant_Units__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Other_Refrigerant_Units__c</fullName>
    <description>Container Service Account field to be used in DocuSign</description>
    <formula>TEXT(Account__r.Other_Refrigerant_Metrics__c )</formula>
    <label>Other Refrigerant Units</label>
    <type>Text</type>
</CustomField>