NATTQA-ENV/force-app/main/default/objects/CONTAINER_Service_Agreement__c/fields/CONTAINER_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Service Center Representative</inlineHelpText>
    <label>Primary Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.CONTAINER_Is_Primary_Contact__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Agreements (Primary Contact)</relationshipLabel>
    <relationshipName>Service_Agreements2</relationshipName>
    <type>Lookup</type>
</CustomField>