NATTQA-ENV/force-app/main/default/objects/CONTAINER_Service_Agreement__c/fields/CONTAINER_R134a_Units__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_R134a_Units__c</fullName>
    <description>Container Service Account field to track in Docusign</description>
    <formula>TEXT(Account__r.CONTAINER_R134_Metrics__c )</formula>
    <label>R134a Units</label>
    <type>Text</type>
</CustomField>