NATTQA-ENV/force-app/main/default/objects/CONTAINER_Service_Agreement__c/fields/CONTAINER_R744_Units__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_R744_Units__c</fullName>
    <description>Container Service Account field to be used in DocuSign</description>
    <formula>TEXT( Account__r.CONTAINER_R7444_Metrics__c )</formula>
    <label>R744 Units</label>
    <type>Text</type>
</CustomField>