NATTQA-ENV/force-app/main/default/objects/CONTAINER_Service_Agreement__c/fields/CONTAINER_Regional_Service_Manager__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Regional_Service_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Service Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>Container Service RSM</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>