NATTQA-ENV/force-app/main/default/objects/CONTAINER_Service_Agreement__c/fields/CONTAINER_Warranty_Contact__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Warranty_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact record of Contact Type as Warranty Contact.</description>
    <label>Warranty Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.NAC_Contact_Type__c</field>
            <operation>equals</operation>
            <value>Warranty Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Agreements (Warranty Contact)</relationshipLabel>
    <relationshipName>Service_Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>