NATTQA-ENV/force-app/main/default/objects/CONTAINER_Service_Agreement__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <formula>CONTAINER_Primary_Contact__r.FirstName &amp; &quot;, &quot; &amp; CONTAINER_Primary_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact</label>
    <type>Text</type>
</CustomField>