NATTQA-ENV/force-app/main/default/objects/CONTAINER_Service_Agreement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CONTAINER_Agreement_Start_Date__c</columns>
    <columns>CONTAINER_Agreement_End_Date__c</columns>
    <columns>CONTAINER_Renewal_Next_Action__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CONTAINER_Regional_Service_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>