NATTQA-ENV/force-app/main/default/objects/CONTAINER_Service_Agreement__c/listViews/Copy_of_2024_Agreements_EMEA.listView-meta.xml
<ListView>
    <fullName>Copy_of_2024_Agreements_EMEA</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CONTAINER_Agreement_Start_Date__c</columns>
    <columns>CONTAINER_Agreement_End_Date__c</columns>
    <columns>CONTAINER_Renewal_Next_Action__c</columns>
    <columns>CONTAINER_Regional_Service_Manager__c</columns>
    <columns>CONTAINER_Primary_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTAINER_Agreement_End_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>12/31/2024</value>
    </filters>
    <filters>
        <field>Account__c</field>
        <operation>startsWith</operation>
        <value>Med,Spain,Depol,ACS</value>
    </filters>
    <filters>
        <field>Account__c</field>
        <operation>notContain</operation>
        <value>Maroc</value>
    </filters>
    <label>MSC Agreements EMEA</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <group>CONTAINER_FSM_EMEA_Case</group>
    </sharedTo>
</ListView>