NATTQA-ENV/force-app/main/default/objects/CONTAINER_Service_Agreement__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CONTAINER_Agreement_Start_Date__c</columns>
    <columns>CONTAINER_Agreement_End_Date__c</columns>
    <columns>CONTAINER_Renewal_Next_Action__c</columns>
    <columns>CONTAINER_Regional_Service_Manager__c</columns>
    <columns>CONTAINER_Primary_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTAINER_Agreement_End_Date__c</field>
        <operation>equals</operation>
        <value>12/31/2023</value>
    </filters>
    <label>2023 Agreements</label>
</ListView>