NATTQA-ENV/force-app/main/default/objects/CONTAINER_Service_Agreement__c/listViews/X2024_Agreements_APO.listView-meta.xml
<ListView>
    <fullName>X2024_Agreements_APO</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CONTAINER_Agreement_Start_Date__c</columns>
    <columns>CONTAINER_Agreement_End_Date__c</columns>
    <columns>CONTAINER_Renewal_Next_Action__c</columns>
    <columns>CONTAINER_Regional_Service_Manager__c</columns>
    <columns>CONTAINER_Primary_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTAINER_Agreement_End_Date__c</field>
        <operation>greaterThan</operation>
        <value>12/31/2025</value>
    </filters>
    <filters>
        <field>CONTAINER_Regional_Service_Manager__c</field>
        <operation>contains</operation>
        <value>Hai Kuan</value>
    </filters>
    <label>2026 Agreements APO</label>
    <sharedTo>
        <group>CONTAINER_FSM_APO_Case</group>
    </sharedTo>
</ListView>