NATTQA-ENV/force-app/main/default/objects/CONTAINER_Service_Agreement__c/listViews/X2024_Agreements_EMEA.listView-meta.xml
<ListView>
    <fullName>X2024_Agreements_EMEA</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CONTAINER_Agreement_Start_Date__c</columns>
    <columns>CONTAINER_Agreement_End_Date__c</columns>
    <columns>CONTAINER_Renewal_Next_Action__c</columns>
    <columns>CONTAINER_Regional_Service_Manager__c</columns>
    <columns>CONTAINER_Primary_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTAINER_Agreement_End_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>12/31/2024</value>
    </filters>
    <filters>
        <field>CONTAINER_Regional_Service_Manager__c</field>
        <operation>contains</operation>
        <value>Shaun</value>
    </filters>
    <filters>
        <field>CONTAINER_Agreement_Start_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2024</value>
    </filters>
    <label>2024 Agreements EMEA</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>